# Minicam

./: CLAUDE.md  Makefile  README.md  pyproject.toml
deploy/: bootstrap-pi0.sh  ssh_config.example
deploy/systemd/: minicam-api.service  minicam-net-usb.service  minicam-net-wifi.service
scripts/: validate_sensor.py
src/minicam/: __main__.py  config.py
src/minicam/api/: app.py  routes_capture.py  routes_control.py  routes_preview.py  routes_raw_stream.py  routes_static.py
src/minicam/camera/: controller.py
src/minicam/net/: usb_gadget.py
web/: app.js  index.html  style.css
